--- a/templates/tip.html
+++ b/templates/tip.html
@@ -1,9 +1,9 @@
 {% extends "layout.html" %}
 
 {% block titleblock %}
-Home
+Tip
 {% endblock %}
 
 {% block main %}
-Hello World!
+Tip
 {% endblock %}
