--- a/static/styles.css
+++ b/static/styles.css
@@ -14,6 +14,23 @@ main {
     width: auto;
 }
 
+.container {
+    max-width:100%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 #richmond:hover {
     color: black;
     background-color: #ffd200;
