--- a/templates/layout.html
+++ b/templates/layout.html
@@ -34,7 +34,9 @@
                 {% if session.user_id %}
                     <ul class="navbar-nav mr-auto mt-2">
                         <li class="nav-item"><a class="nav-link" href="/tip">Tip</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/teams">Teams</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/teams">Teams</a></li>.
+                        <li class="nav-item"><a class="nav-link" href="/teamdetail">Team Detail</a></li>
+
                     </ul>
                     <ul class="navbar-nav ml-auto mt-2">
                         <li class="nav-item"><a class="nav-link" href="/logout">Log Out</a></li>
@@ -54,5 +56,5 @@
 
 
     </body>
-
+    {% block script %}{% endblock %}
 </html>
