--- a/templates/index.html
+++ b/templates/index.html
@@ -9,13 +9,13 @@ Home
 <div class="container">
     <h1 >Welcome to Tipper, </h1>
     <h5 >the home of Footy Tipping!</h5>
-    <div class="container p-3">
+    <div class="container p-3" style="max-width: 1100px;">
         <div class="row">
             <div class="col-sm p-2">
                 
             </div>
             <div class="col-sm p-2">
-                <a class="btn " href="/teams"><h3>Study the Teams</h3></a>
+                <a class="btn " href="/teamdetail"><h3>Study the Teams</h3></a>
             </div>
             <div class="col-sm p-2">
                 
