--- a/templates/layout.html
+++ b/templates/layout.html
@@ -27,17 +27,17 @@
 
     <body>
 
-        <nav class="navbar navbar-expand-md navbar-light bg-light border">
-            <a class="navbar-brand" href="/"><span >Tipper</span></a>
+        <nav class="navbar navbar-expand-md navbar-dark bg-dark border">
+            <a class="navbar-brand" id="home" href="/"><span >Tipper</span></a>
             <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbar" data-toggle="collapse" type="button">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbar">
                 {% if session.user_id %}
                     <ul class="navbar-nav mr-auto mt-2">
-                        <li class="nav-item"><a class="nav-link" href="/tip">Tip</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/teams">Teams</a></li>.
-                        <li class="nav-item"><a class="nav-link" href="/teamdetail">Team Detail</a></li>
+                        <li class="nav-item"><a class="nav-link" id="tip" href="/tip">Tip</a></li>
+                        <li class="nav-item"><a class="nav-link" id="ladder" href="/ladder">Ladder</a></li>.
+                        <li class="nav-item"><a class="nav-link" id="teamdetail" href="/teamdetail">Team Detail</a></li>
 
                     </ul>
                     <ul class="navbar-nav ml-auto mt-2">
@@ -58,4 +58,13 @@
 
 
     </body>
+    <script>
+        function activeLink() {
+            let path = window.location.pathname.split('/').pop()
+            var al = document.querySelector(`a#${path}`)
+            al.classList.add('active')
+        }
+
+        document.addEventListener('DOMContentLoaded', activeLink);
+    </script>
 </html>
