--- a/templates/ladder.html
+++ b/templates/ladder.html
@@ -6,7 +6,11 @@ Teams
 
 {% block main %}
 <div class="container">
-    
+    <div class="row justify-content-start">
+        <h1 class="display-5 ">Ladder</h1>
+    </div>
+    <hr/>
+    <br/>
     <form action="/ladder" method="post">
         <div class="form-group">
             <label>Season: </label>
