--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@ Home
 <div class="container">
     <h1 >Welcome to Tipper, </h1>
     <h5 >the home of Footy Tipping!</h5>
-    <div class="container p-3" style="max-width: 1100px;">
+    <div class="container p-3" id="indexmenu" style="max-width: 1100px;">
         <div class="row">
             <div class="col-sm p-2">
                 
