--- a/templates/ladder.html
+++ b/templates/ladder.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 
-{% block titleblock %}
+{% block title %}
 Teams
 {% endblock %}
 
@@ -11,56 +11,53 @@ Teams
     </div>
     <hr/>
     <br/>
-    <form action="/ladder" method="post">
-        <div class="form-group">
-            <label>Season: </label>
-            <select required autocomplete="off" class="form-control" name="season"  placeholder="Season" style="vertical-align:middle">
-                <option disabled selected value="">Season</option>
-                {% for s in ['2019','2020','2021'] %}
-                    {% if s == season %}
-                        <option selected value="{{ s }}">{{ s }}</option>
-                    {% else %}
-                        <option value="{{ s }}">{{ s }}</option>
-                    {% endif %}
-                {% endfor %}
-            </select>
-            <button type="submit" class="btn btn-primary">Get Ladder</button>
+    <div class="row">
+        <div class='col-xs'>
+            <form action="/ladder" method="post">
+                <div class="form-group">
+                    <label>Season: </label>
+                    <select required autocomplete="off" class="form-control" name="season"  placeholder="Season" style="vertical-align:middle">
+                        <option disabled selected value="">Season</option>
+                        {% for s in ['2019','2020','2021'] %}
+                            {% if s == season %}
+                                <option selected value="{{ s }}">{{ s }}</option>
+                            {% else %}
+                                <option value="{{ s }}">{{ s }}</option>
+                            {% endif %}
+                        {% endfor %}
+                    </select>
+                    <button type="submit" class="btn btn-primary">Get Ladder</button>
+                </div>
+            </form>
         </div>
-        
-    </form>
-    {% if ladder %}
-    
-    <br/>
-    <div class="container">
-    <table class="table table-hover" style="max-width: 1100px; margin:auto">
-        <thead class="thead-dark">
-            <tr><th colspan="5"><h1>{{season}} Ladder</h1></th></tr>
-            <tr>
-                <th scope="col" style="text-align: end;">Team</th>
-                <th scope="col">W</th>
-                <th scope="col">L</th>
-                <th scope="col">D</th>
-                <th scope="col">%</th>
-            </tr>
-        </thead>
-        {% for team in ladder %}
-            
-                <tr id={{team.teamname}} class="clickable-row" style="cursor: pointer;" data-href="/teamdetail?team={{team.teamname}}">
-                    <td style="text-align: end;">{{ team.fullname }}</td>
-                    <td>{{ team.wins }}</td>
-                    <td>{{ team.losses }}</td>
-                    <td>{{ team.draws }}</td>
-                    <td>{{ (team.pf / team.pa * 100) | formatpcnt}}</td>
-                </tr>
-            
-        {% endfor %}
-        
-        
-
-    </table>
+        {% if ladder %}
+        <br/>
+        <div class="col-lg">
+            <table class="table table-hover" style="max-width: 1100px; margin:auto">
+                <thead class="thead-dark">
+                    <tr><th colspan="5"><h1>{{season}} Ladder</h1></th></tr>
+                    <tr>
+                        <th scope="col" style="text-align: end;">Team</th>
+                        <th scope="col">W</th>
+                        <th scope="col">L</th>
+                        <th scope="col">D</th>
+                        <th scope="col">%</th>
+                    </tr>
+                </thead>
+                {% for team in ladder %}
+                    
+                        <tr id={{team.teamname}} class="clickable-row" style="cursor: pointer;" data-href="/teamdetail?team={{team.teamname}}">
+                            <td style="text-align: end;">{{ team.fullname }}</td>
+                            <td>{{ team.wins }}</td>
+                            <td>{{ team.losses }}</td>
+                            <td>{{ team.draws }}</td>
+                            <td>{{ (team.pf / team.pa * 100) | formatpcnt}}</td>
+                        </tr>
+                {% endfor %}
+            </table>
+        </div>
+        {% endif %}
     </div>
-    {% endif %}
-    
 </div>
 <script>
 $(".clickable-row").click(function () {
