--- a/templates/tip.html
+++ b/templates/tip.html
@@ -116,10 +116,8 @@ Tip
             </div>
         {% endif %}
         </div>
-    
     {% endif %}
-    
-
+</div>
 </div>
 <script>
     $(".clickable-row").click(function () {
