--- a/templates/tip.html
+++ b/templates/tip.html
@@ -116,6 +116,10 @@ Tip
             </div>
         {% endif %}
         </div>
+    {% else %}
+        <div>
+            <h2 class="display-5">No upcoming games</h2>
+        </div>
     {% endif %}
 </div>
 </div>
